src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__accept_details.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: details
---
Request acceptance details:
  Paying account: @owner (ID 123)
  Request ID: request-1
  Requester: @requester (Synthetic\nrequester) (ID 456)
  Amount: $0.01
  Note: Synthetic\nrequest
  Audience: private
  Purchase protection: not requested
  Current request status: pending
  Created: 1969-12-31T16:00:00
  Available Venmo balance: $0.01
  Funding plan: available Venmo balance
