src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__accept_preflight.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: preflight
---
Request acceptance preflight:
  Paying account: @owner (ID 123)
  Request ID: request-1
  Requester: @requester (Synthetic\nrequester) (ID 456)
  Amount: $0.01
  Note: Synthetic\nrequest
  Audience: private
  Current request status: pending
  Created: 1970-01-01T00:00:00Z
  Fee/source proof: unavailable in the candidate request-update contract
  Available Venmo balance: $0.01
  Funding guard: available balance covers the request and no external funding method will be submitted.
  Warning: the candidate update does not bind that balance snapshot or prove the final fee/source; accepting pays the requester and settles this exact request.
