src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__cancel_result.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: cancel_output
---
Request ID: request-1
Server status: cancelled
Request cancelled for: @recipient (Synthetic\nrecipient)
Amount requested: $0.01
Money sent: no
