src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__decline_details.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: decline_details
---
Request decline details:
  Request ID: request-1
  Requester: @requester (Synthetic\nrequester) (ID 456)
  Amount: $0.01
  Note: Synthetic\nrequest
  Audience: private
  Current request status: pending
  Created: 1969-12-31T16:00:00
  Action: decline this exact incoming request without sending money.
