src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__decline_result.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: decline_output
---
Request ID: request-1
Server status: cancelled
Declined requester: @requester (Synthetic\nrequester)
Amount requested: $0.01
Money sent: no
