src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__external_accept_details.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: "String::from_utf8(external_details)?"
---
Request acceptance details:
  Paying account: @owner (ID 123)
  Request ID: request-1
  Requester: @requester (Synthetic\nrequester) (ID 456)
  Amount: $1.00
  Note: Synthetic\nrequest
  Audience: private
  Purchase protection: requested
  Current request status: pending
  Created: 1969-12-31T16:00:00
  Available Venmo balance: $0.00
  Funding source selection: automatic
  Submitted funding source: Synthetic bank (bank ending 1234, ID bank-1)
  Submitted method fee: unknown
  Estimated purchase-protection seller fee: $0.25
  Estimated recipient proceeds: $0.75
