src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__external_accept_result.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: "String::from_utf8(external_result)?"
---
Accepted request ID: request-1
Paid requester: @requester (Synthetic\nrequester)
Amount: $1.00
Submitted backup method ID: bank-1
