src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__pay_details.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: details
---
Payment details:
  From account: @owner (ID 123)
  Recipient: @bob (Synthetic\nrecipient) (ID 456)
  Amount: $0.01
  Note: Synthetic\nnote
  Requested audience: private
  Available Venmo balance: $0.00
  Submitted backup method: Synthetic bank (bank ending 1234, ID bank-1)
  Submitted method fee: unknown
  Eligibility-reported fee: $0.03
  Eligibility-reported total: $0.04
  Warning: Venmo may use available balance before the submitted backup method.
  Warning: eligibility is not bound to the submitted backup method; the final fee may differ.
  Warning: Venmo may apply a more restrictive audience based on participant privacy settings.
